--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -1,6 +1,7 @@
 input {
-  beats {
-    port => 5044
+  gelf {
+    host => "0.0.0.0"
+    port => 12201
   }
   file {
     path => "/usr/share/logstash/ingest_data/*"
@@ -9,38 +10,67 @@ input {
 }
 
 filter {
-  if [type] == "nginx-access" {
-    grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
-    }
+  if [container_name] == "beepong-postgres_db" {
     mutate {
-      add_field => { "log_type" => "nginx_access" }
+      add_field => { "service_name" => "postgres" }
     }
-  } else if [type] == "nginx-error" {
-    grok {
-      match => { "message" => "\[%{HTTPDATE:timestamp}\] \[%{WORD:loglevel}\] %{NUMBER:pid}#%{NUMBER}: \*(?:%{NUMBER}|%{GREEDYDATA:unique_id}) %{GREEDYDATA:error_message}" }
-    }
+  }
+  # Convert host_name to a string if it's an object with a name field
+  if [host_name] and [host_name][name] {
     mutate {
-      add_field => { "log_type" => "nginx_error" }
+      replace => { "host_name" => "%{[host_name][name]}" }
     }
-  } else if [type] == "syslog" {
-    grok {
-      match => { "message" => "%{SYSLOGLINE}" }
-    }
+  }
+  if [host] {
     mutate {
-      add_field => { "log_type" => "syslog" }
+      rename => { "host" => "host_name" }
     }
   }
 }
 
 output {
-  elasticsearch {
-    hosts => ["https://elasticsearch:9200"]
-    index => "logstash-%{+YYYY.MM.dd}"
-    user => "${ELASTIC_USER}"
-    password => "${ELASTIC_PASSWORD}"
-    ssl => true
-    ssl_certificate_authorities => ["certs/ca/ca.crt"]
+  stdout { codec => rubydebug }
+
+  # Backend logs with ILM
+  if [container_name] == "beepong-backendDummy" {
+    elasticsearch {
+      hosts => ["https://elasticsearch:9200"]
+      ilm_enabled => true
+      ilm_rollover_alias => "backend-logs"
+      ilm_pattern => "{now/d}-000001"
+      ilm_policy => "Backend-logs-index-policy"
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PASSWORD}"
+      ssl_enabled => true
+      ssl_certificate_authorities => ["certs/ca/ca.crt"]
+    }
+  }
+  # Postgres logs with ILM
+  if [service_name] == "postgres" {
+    elasticsearch {
+      hosts => ["https://elasticsearch:9200"]
+      ilm_enabled => true
+      ilm_rollover_alias => "postgres-logs"
+      ilm_pattern => "{now/d}-000001"
+      ilm_policy => "Postgres-logs-index-policy"
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PASSWORD}"
+      ssl_enabled => true
+      ssl_certificate_authorities => ["certs/ca/ca.crt"]
+    }
+  }
+  # Nginx logs with ILM
+  if [log][file][path] =~ "access.log" {
+    elasticsearch {
+      hosts => ["https://elasticsearch:9200"]
+      ilm_enabled => true
+      ilm_rollover_alias => "nginx-logs"
+      ilm_pattern => "{now/d}-000001"
+      ilm_policy => "Nginx-logs-index-policy"
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PASSWORD}"
+      ssl_enabled => true
+      ssl_certificate_authorities => ["certs/ca/ca.crt"]
+    }
   }
 }
-
